# smart_home_vision

./: .gitignore  LICENSE  README.md
.github/rulesets/: full-protection.yml
.github/workflows/: ci.yml
api_server/app/: main.py
api_server/app/core/: cpp_bridge.py
api_server/app/endpoints/: detection.py  management.py  streaming.py
api_server/requirements/: dev.txt
api_server/tests/unit/: test_api.py
core_engine/: CMakeLists.txt
core_engine_cpp/: CMakeLists.txt
core_engine_cpp/include/detection/: detector.hpp
core_engine_cpp/src/: detector.cpp  pybind_module.cpp
